--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -1,7 +1,9 @@
-{"Sign in":"Connection",
+{"Sign in":"Connexion",
 "Members":"Membres",
 "Partners":"Partenaires",
-"Admin":"Référents serveur",
+"Partner":"Partenaire",
+"Admins":"Référents serveur",
+"Admin":"Référent serveur",
 "Active rooms":"Salons actifs",
 "Personal conversation":"Conversations personelles",
 "Inactive Rooms":"Salons inactifs",
@@ -16,18 +18,44 @@
 "Stats":"Status du serveur",
 "Search in this Table":"Rechercher",
 "Create User" :"Nouvel Utilisateur",
-"User Id" :"Identifiant",
+"User Id" :"Nom d'utilisateur",
 "Last Name" :"Nom",
 "First Name" :"Prénom",
 "this email adress seems to be incorrect please enter a valid email adress ":"Cette adresse email semble incorrect entrez une addresse email valide",
 "Invalid Email":"Adresse email invalide",
-"Invalid First Name":"Prénom invalide",
 "Invalid Last Name":"Nom invalide",
 "First Name must contain at least two characters ":"Le Prénom doit contenir au moins deux caractères",
 "Last Name must contain at least two characters ":"Le Nom doit contenir au moins deux caractères",
 "Email already in use":"Email utilisé",
-"is already in use enter a new email":" est déjà associé à un compte ",
-"User id required":"Identifiant requis",
-"enter a valid user id":" Entrer un identifiant valide ",
-"User Creation Failed":" Échecs lors de la creation de l'utilisateur "
+"Invalid First Name":"Prénom invalide",
+" is already in use enter a new email":" est déjà associé à un compte ",
+"User id required":"Nom d'utilisateur requis",
+"enter a valid user id":" Entrez un nom d'utiliateur valide ",
+"User Creation Failed":" Échecs lors de la creation de l'utilisateur ",
+"User Created":"Utilisateur créé",
+" has been added to watcha":" a été ajouté a Watcha",
+"Upgrade to member":"Promouvoir en membre",
+"Reset Password":" Réinitialiser le mot de passe",
+"Deactivate Account":"Désactiver le compte",
+"Show connection history":"voir l'historique de connexion",
+"Device":"Appareil",
+"Devices":"Appareils",
+"Last seen":"dernière connexion",
+"Connected":"Connecté",
+"Creation":"Création",
+"Account deactivated":"Compte désactivé",
+ " account have been deactivated":" est désactivé",
+"Deactivation failed": "L'opération a échouée",
+"an email has been send to ":"un email a été envoyé à ",
+" with a new password":" avec un nouveau de mot de passe",
+"Password reset failed": "L'opération a échouée",
+"Name":"Nom",
+"Active":"Active",
+"Creator":"Créateur",
+"Show users":"Afficher les Utilisateurs",
+"Users in this room":"Utilisateurs dans ce salon",
+"User name":"Nom d'utilisateur",
+"Display Name":"Nom d'affichage",
+"Date of creation":"Date de création",
+"Room Id":"Identifiant du salon"
 }
