cherry-picked 618b376... fix some translation, better date, improve css for toolBar

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -11,13 +11,13 @@
 "Users":"Utilisateurs",
 "User":"Utilisateur",
 "Statistics for Watcha server":"Status du serveur",
-"Hide members":"Masquer membres",
-"Hide Personals conversations":"Masquer discussions",
-"Hide partners":"Masquer partenaires",
-"Hide inactive":"Masquer inactives",
+"Hide members":"Masquer les utilisateurs internes",
+"Hide Personals conversations":"Masquer les discussions",
+"Hide partners":"Masquer les utilisateurs externes (partenaires)",
+"Hide inactive":"Masquer les salons  inactifs",
 "Stats":"Status du serveur",
 "Search in this Table":"Rechercher",
-"Create User" :"Nouvel Utilisateur",
+"Create user" :"Nouvel utilisateur",
 "User Id" :"Nom d'utilisateur",
 "Last Name" :"Nom",
 "First Name" :"Prénom",
@@ -44,7 +44,7 @@
 "Connected":"Connecté",
 "Creation":"Création",
 "Account deactivated":"Compte désactivé",
- " account have been deactivated":" est désactivé",
+" account have been deactivated":" est désactivé",
 "Deactivation failed": "L'opération a échouée",
 "an email has been send to ":"un email a été envoyé à ",
 " with a new password":" avec un nouveau de mot de passe",
@@ -59,5 +59,6 @@
 "Date of creation":"Date de création",
 "Room Id":"Identifiant du salon",
 "Password reseted":"Mot de passe réinitialisé",
-"Activate account":"Activer le compte"
+"Activate account":"Activer le compte",
+"lang":"fr-FR"
 }
