Many text (strings) improvements only

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -2,26 +2,26 @@
 "Members":"Membres",
 "Partners":"Partenaires",
 "Partner":"Partenaire",
-"Admins":"Référents serveur",
-"Admin":"Référent serveur",
+"Administrators":"Référents serveur",
+"Admin":"Référent",
 "Active rooms":"Salons actifs",
-"Personal conversation":"Conversations personelles",
+"One-to-one conversations":"Conversations à deux",
 "Inactive Rooms":"Salons inactifs",
 "Rooms":"Salons",
 "Users":"Utilisateurs",
 "User":"Utilisateur",
 "Statistics for Watcha server":"Status du serveur",
 "Hide members":"Masquer les utilisateurs internes",
-"Hide Personals conversations":"Masquer les discussions",
-"Hide partners":"Masquer les utilisateurs externes (partenaires)",
-"Hide inactive":"Masquer les salons  inactifs",
+"Hide one-to-one conversations":"Masquer les conversations à deux",
+"Hide partners":"Masquer les utilisateurs externes",
+"Hide inactive":"Masquer les salons inactifs",
 "Stats":"Status du serveur",
-"Search in this Table":"Rechercher",
+"Search":"Rechercher",
 "Create user" :"Nouvel utilisateur",
 "User Id" :"Nom d'utilisateur",
 "Last Name" :"Nom",
 "First Name" :"Prénom",
-"this email adress seems to be incorrect please enter a valid email adress ":"Cette adresse email semble incorrect entrez une addresse email valide",
+"This email address seems to be invalid. Please enter a valid email address.":"Cette adresse email semble invalide. Veuillez entrer une adresse email valide",
 "Invalid Email":"Adresse email invalide",
 "Invalid Last Name":"Nom invalide",
 "First Name must contain at least two characters ":"Le Prénom doit contenir au moins deux caractères",
@@ -30,29 +30,29 @@
 "Invalid First Name":"Prénom invalide",
 " is already in use enter a new email":" est déjà associé à un compte ",
 "User id required":"Nom d'utilisateur requis",
-"enter a valid user id":" Entrez un nom d'utiliateur valide ",
-"User Creation Failed":" Échecs lors de la creation de l'utilisateur ",
+"Enter a valid user id":" Entrez un nom d'utilisateur valide ",
+"User Creation Failed":" Échec lors de la création de l'utilisateur ",
 "User Created":"Utilisateur créé",
-" has been added to watcha":" a été ajouté a Watcha",
+" has been added to watcha":" a été ajouté à Watcha",
 "Upgrade to member":"Promouvoir en membre",
 "Reset Password":" Réinitialiser le mot de passe",
 "Deactivate Account":"Désactiver le compte",
 "Show connection history":"voir l'historique de connexion",
 "Device":"Appareil",
 "Devices":"Appareils",
-"Last seen":"dernière connexion",
+"Last seen":"Dernière connexion",
 "Connected":"Connecté",
 "Creation":"Création",
 "Account deactivated":"Compte désactivé",
 " account have been deactivated":" est désactivé",
-"Deactivation failed": "L'opération a échouée",
+"Deactivation failed": "L'opération a échoué",
 "an email has been send to ":"un email a été envoyé à ",
 " with a new password":" avec un nouveau de mot de passe",
-"Password reset failed": "L'opération a échouée",
+"Password reset failed": "L'opération a échoué",
 "Name":"Nom",
 "Active":"Active",
 "Creator":"Créateur",
-"Show users":"Afficher les Utilisateurs",
+"Show users":"Afficher les utilisateurs",
 "Users in this room":"Utilisateurs dans ce salon",
 "User name":"Nom d'utilisateur",
 "Display Name":"Nom d'affichage",
