improve admin interface

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -15,7 +15,7 @@
 "Hide one-to-one conversations":"Masquer les conversations à deux",
 "Hide partners":"Masquer les utilisateurs externes",
 "Hide inactive":"Masquer les salons inactifs",
-"Stats":"Status du serveur",
+"Overview":"Status du serveur",
 "Search":"Rechercher",
 "Create user" :"Nouvel utilisateur",
 "User Id" :"Nom d'utilisateur",
