make column header translatable, change admin name in overview from full id to simplified id

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -50,7 +50,7 @@
 " with a new password":" avec un nouveau de mot de passe",
 "Password reset failed": "L'opération a échoué",
 "Name":"Nom",
-"Active":"Active",
+"Active":"Actif",
 "Creator":"Créateur",
 "Show users":"Afficher les utilisateurs",
 "Users in this room":"Utilisateurs dans ce salon",
