add translation menu on connection fix a lot of language and display bugs

--- a/src/translation/en/common.json
+++ b/src/translation/en/common.json
@@ -1,2 +1,7 @@
 {"Sign in":"Sign in",
+  "Member":"Internal user",
+  "Members":"Internal users",
+  "Status":"Role",
+  "Date of creation":"Created on",
+  "Last seen":"Last active on",
 "lang":"en-En"}
