--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -1,21 +1,27 @@
 {"Sign in":"Connexion",
-"Members":"Membres",
+"Members":"Utilisateurs interne",
+"Member":"Utilisateur interne",
+"One to one Conversations":"Discussions a deux",
+"Internal users":"Utilisateur internes",
 "Partners":"Partenaires",
 "Partner":"Partenaire",
-"Administrators":"Référents serveur",
-"Admin":"Référent",
+"Administrators":"Administrateurs",
+"Admin":"Administrateur",
 "Active rooms":"Salons actifs",
 "One-to-one conversations":"Conversations à deux",
+"One to one":"Conversations à deux",
 "Inactive Rooms":"Salons inactifs",
+"Inactive":"Inactifs",
 "Rooms":"Salons",
 "Users":"Utilisateurs",
+"Status":"Rôle",
 "User":"Utilisateur",
-"Statistics for Watcha server":"Status du serveur",
-"Hide members":"Masquer les utilisateurs internes",
+"Overview":"Etat du serveur",
+"Statistics for Watcha server":"Statistiques",
+"Hide internal users":"Masquer les utilisateurs internes",
 "Hide one-to-one conversations":"Masquer les conversations à deux",
 "Hide partners":"Masquer les utilisateurs externes",
 "Hide inactive":"Masquer les salons inactifs",
-"Overview":"Status du serveur",
 "Search":"Rechercher",
 "Create user" :"Nouvel utilisateur",
 "User Id" :"Nom d'utilisateur",
@@ -40,7 +46,7 @@
 "Show connection history":"voir l'historique de connexion",
 "Device":"Appareil",
 "Devices":"Appareils",
-"Last seen":"Dernière connexion",
+"Last seen":"Derniere activité",
 "Connected":"Connecté",
 "Creation":"Création",
 "Account deactivated":"Compte désactivé",
@@ -56,7 +62,7 @@
 "Users in this room":"Utilisateurs dans ce salon",
 "User name":"Nom d'utilisateur",
 "Display Name":"Nom d'affichage",
-"Date of creation":"Date de création",
+"Date of creation":"Créé le",
 "Room Id":"Identifiant du salon",
 "Password reseted":"Mot de passe réinitialisé",
 "Activate account":"Activer le compte",
