fix the : disgrace

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -15,7 +15,7 @@
 "Rooms":"Salons",
 "Users":"Utilisateurs",
 "Status":"Rôle",
-"User":"Utilisateur",
+"User":"Utilisateur ",
 "Overview":"Etat du serveur",
 "Statistics for Watcha server":"Statistiques",
 "Hide internal users":"Masquer les utilisateurs internes",
@@ -29,6 +29,7 @@
 "First Name" :"Prénom",
 "This email address seems to be invalid. Please enter a valid email address.":"Cette adresse email semble invalide. Veuillez entrer une adresse email valide",
 "Invalid Email":"Adresse email invalide",
+"Email":"Email ",
 "Invalid Last Name":"Nom invalide",
 "First Name must contain at least two characters ":"Le Prénom doit contenir au moins deux caractères",
 "Last Name must contain at least two characters ":"Le Nom doit contenir au moins deux caractères",
@@ -48,7 +49,7 @@
 "Devices":"Appareils",
 "Last seen":"Derniere activité",
 "Connected":"Connecté",
-"Creation":"Création",
+"Creation":"Création ",
 "Account deactivated":"Compte désactivé",
 " account have been deactivated":" est désactivé",
 "Deactivation failed": "L'opération a échoué",
