more shaming for wrong :

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -1,16 +1,16 @@
 {"Sign in":"Connexion",
-"Members":"Utilisateurs interne",
+"Members":"Utilisateurs internes ",
 "Member":"Utilisateur interne",
 "One to one Conversations":"Discussions a deux",
 "Internal users":"Utilisateur internes",
-"Partners":"Partenaires",
+"Partners":"Partenaires ",
 "Partner":"Partenaire",
 "Administrators":"Administrateurs",
-"Admin":"Administrateur",
-"Active rooms":"Salons actifs",
-"One-to-one conversations":"Conversations à deux",
+"Admin":"Administrateur ",
+"Active rooms":"Salons actifs ",
+"One-to-one conversations":"Conversations à deux ",
 "One to one":"Conversations à deux",
-"Inactive Rooms":"Salons inactifs",
+"Inactive Rooms":"Salons inactifs ",
 "Inactive":"Inactifs",
 "Rooms":"Salons",
 "Users":"Utilisateurs",
