--- a/src/translation/en/common.json
+++ b/src/translation/en/common.json
@@ -4,4 +4,5 @@
   "Status":"Role",
   "Date of creation":"Created on",
   "Last seen":"Last active on",
-"lang":"en-En"}
+  "One to one":"One-to-one",
+ "lang":"en-En"}
