--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -1,15 +1,14 @@
 {"Sign in":"Connexion",
-"Members":"Utilisateurs interne",
+"Members":"Utilisateurs internes",
 "Member":"Utilisateur interne",
-"One to one Conversations":"Discussions a deux",
-"Internal users":"Utilisateur internes",
+"Internal users":"Utilisateurs internes",
 "Partners":"Partenaires",
 "Partner":"Partenaire",
 "Administrators":"Administrateurs",
 "Admin":"Administrateur",
 "Active rooms":"Salons actifs",
 "One-to-one conversations":"Conversations à deux",
-"One to one":"Conversations à deux",
+"One to one":"Conversation à deux",
 "Inactive Rooms":"Salons inactifs",
 "Inactive":"Inactifs",
 "Rooms":"Salons",
@@ -46,7 +45,7 @@
 "Show connection history":"voir l'historique de connexion",
 "Device":"Appareil",
 "Devices":"Appareils",
-"Last seen":"Derniere activité",
+"Last seen":"Dernière activité le",
 "Connected":"Connecté",
 "Creation":"Création",
 "Account deactivated":"Compte désactivé",
