small fixes to translations

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -1,7 +1,6 @@
 {"Sign in":"Connexion",
 "Members":"Utilisateurs internes ",
 "Member":"Utilisateur interne",
-"One to one Conversations":"Discussions a deux",
 "Internal users":"Utilisateurs internes",
 "Partners":"Partenaires ",
 "Partner":"Partenaire",
@@ -13,6 +12,7 @@
 "Inactive Rooms":"Salons inactifs ",
 "Inactive":"Inactifs",
 "Rooms":"Salons",
+"Room":"Salon ",
 "Users":"Utilisateurs",
 "Status":"Rôle",
 "User":"Utilisateur ",
