small fixes for UI and localization

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -41,7 +41,7 @@
 "User Creation Failed":" Échec lors de la création de l'utilisateur ",
 "User Created":"Utilisateur créé",
 " has been added to watcha":" a été ajouté à Watcha",
-"Upgrade to member":"Promouvoir en membre",
+"Upgrade to internal user":"Promouvoir en utilisateur interne",
 "Reset Password":" Réinitialiser le mot de passe",
 "Deactivate Account":"Désactiver le compte",
 "Show connection history":"voir l'historique de connexion",
@@ -51,7 +51,9 @@
 "Connected":"Connecté",
 "Creation":"Création ",
 "Account deactivated":"Compte désactivé",
-" account have been deactivated":" est désactivé",
+" account has been deactivated":" a été désactivé",
+"Role updated":  "Rôle mis à jour",
+" account has been upgraded to internal user":" a été promu en utilisateur interne",
 "Deactivation failed": "L'opération a échoué",
 "an email has been send to ":"un email a été envoyé à ",
 " with a new password":" avec un nouveau de mot de passe",
