localisation for loading

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -13,6 +13,7 @@
 "Inactive":"Inactifs",
 "Rooms":"Salons",
 "Room":"Salon ",
+"Loading":"Chargement",
 "Users":"Utilisateurs",
 "Status":"Rôle",
 "User":"Utilisateur ",
