--- a/src/translation/en/common.json
+++ b/src/translation/en/common.json
@@ -1,8 +1,10 @@
-{"Sign in":"Sign in",
-  "Member":"Internal user",
-  "Members":"Internal users",
-  "Status":"Role",
-  "Date of creation":"Created on",
-  "Last seen":"Last active on",
-  "One to one":"One-to-one",
- "lang":"en-En"}
+{
+    "Sign in": "Sign in",
+    "Member": "Internal user",
+    "Members": "Internal users",
+    "Status": "Role",
+    "Date of creation": "Created on",
+    "Last seen": "Last active on",
+    "One to one": "One-to-one",
+    "lang": "en-En"
+}
