--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -1,77 +1,78 @@
-{"Sign in":"Connexion",
-"Members":"Utilisateurs internes ",
-"Member":"Utilisateur interne",
-"Internal users":"Utilisateurs internes",
-"Partners":"Partenaires ",
-"Partner":"Partenaire ",
-"Administrators":"Administrateurs ",
-"Admin":"Administrateur ",
-"Active rooms":"Salons actifs ",
-"One-to-one conversations":"Conversations à deux ",
-"One to one":"Conversation à deux",
-"Inactive Rooms":"Salons inactifs ",
-"Inactive":"Inactifs",
-"Rooms":"Salons",
-"Room":"Salon ",
-"Loading":"Chargement",
-"Users":"Utilisateurs",
-"Status":"Rôle",
-"User":"Utilisateur ",
-"Overview":"Etat du serveur",
-"Statistics for Watcha server":"Statistiques",
-"Hide internal users":"Masquer les utilisateurs internes",
-"Hide one-to-one conversations":"Masquer les conversations à deux",
-"Hide partners":"Masquer les utilisateurs externes",
-"Hide inactive":"Masquer les salons inactifs",
-"Search":"Rechercher",
-"Create user" :"Nouvel utilisateur",
-"User Id" :"Nom d'utilisateur",
-"Last Name" :"Nom",
-"First Name" :"Prénom",
-"This email address seems to be invalid. Please enter a valid email address.":"Cette adresse email semble invalide. Veuillez entrer une adresse email valide",
-"Invalid Email":"Adresse email invalide",
-"Email":"Email ",
-"Invalid Last Name":"Nom invalide",
-"First Name must contain at least two characters ":"Le Prénom doit contenir au moins deux caractères",
-"Last Name must contain at least two characters ":"Le Nom doit contenir au moins deux caractères",
-"Email already in use":"Email utilisé",
-"Invalid First Name":"Prénom invalide",
-" is already in use for a different account.":" est déjà associé à un compte.",
-"User id required":"Nom d'utilisateur requis",
-"Enter a valid user id":" Entrez un nom d'utilisateur valide ",
-"User Creation Failed":" Échec lors de la création de l'utilisateur ",
-"User Created":"Utilisateur créé",
-" has been added to watcha":" a été ajouté à Watcha",
-"Upgrade to internal user":"Promouvoir en utilisateur interne",
-"Reset Password":" Réinitialiser le mot de passe",
-"Deactivate Account":"Désactiver le compte",
-"Show connection history":"voir l'historique de connexion",
-"Device":"Appareil",
-"Devices":"Appareils",
-"Last seen":"Dernière activité le",
-"Connected":"Connecté",
-"Creation":"Création ",
-"Account deactivated":"Compte désactivé",
-" account has been deactivated":" a été désactivé",
-"Role updated":  "Rôle mis à jour",
-" account has been upgraded to internal user":" a été promu en utilisateur interne",
-"Deactivation failed": "L'opération a échoué",
-"an email has been send to ":"un email a été envoyé à ",
-" with a new password":" avec un nouveau de mot de passe",
-"Account reactivated":"Compte réactivé",
-"The account ":"Le compte ",
-" has been reactivated, and an email has been sent to the user with a new password": " a été réactivé, et un nouveau mot de passe a été envoyé à l'utilisateur",
-"Password reset failed": "L'opération a échoué",
-"Name":"Nom",
-"Active":"Actif",
-"Creator":"Créateur",
-"Show users":"Afficher les utilisateurs",
-"Users in this room":"Utilisateurs dans ce salon",
-"User name":"Nom d'utilisateur",
-"Display Name":"Nom d'affichage",
-"Date of creation":"Créé le",
-"Room Id":"Identifiant du salon",
-"Password reset":"Mot de passe réinitialisé",
-"Activate account":"Activer le compte",
-"lang":"fr-FR"
+{
+    "Sign in": "Connexion",
+    "Members": "Utilisateurs internes ",
+    "Member": "Utilisateur interne",
+    "Internal users": "Utilisateurs internes",
+    "Partners": "Partenaires ",
+    "Partner": "Partenaire ",
+    "Administrators": "Administrateurs ",
+    "Admin": "Administrateur ",
+    "Active rooms": "Salons actifs ",
+    "One-to-one conversations": "Conversations à deux ",
+    "One to one": "Conversation à deux",
+    "Inactive Rooms": "Salons inactifs ",
+    "Inactive": "Inactifs",
+    "Rooms": "Salons",
+    "Room": "Salon ",
+    "Loading": "Chargement",
+    "Users": "Utilisateurs",
+    "Status": "Rôle",
+    "User": "Utilisateur ",
+    "Overview": "Etat du serveur",
+    "Statistics for Watcha server": "Statistiques",
+    "Hide internal users": "Masquer les utilisateurs internes",
+    "Hide one-to-one conversations": "Masquer les conversations à deux",
+    "Hide partners": "Masquer les utilisateurs externes",
+    "Hide inactive": "Masquer les salons inactifs",
+    "Search": "Rechercher",
+    "Create user": "Nouvel utilisateur",
+    "User Id": "Nom d'utilisateur",
+    "Last Name": "Nom",
+    "First Name": "Prénom",
+    "This email address seems to be invalid. Please enter a valid email address.": "Cette adresse email semble invalide. Veuillez entrer une adresse email valide",
+    "Invalid Email": "Adresse email invalide",
+    "Email": "Email ",
+    "Invalid Last Name": "Nom invalide",
+    "First Name must contain at least two characters ": "Le Prénom doit contenir au moins deux caractères",
+    "Last Name must contain at least two characters ": "Le Nom doit contenir au moins deux caractères",
+    "Email already in use": "Email utilisé",
+    "Invalid First Name": "Prénom invalide",
+    " is already in use for a different account.": " est déjà associé à un compte.",
+    "User id required": "Nom d'utilisateur requis",
+    "Enter a valid user id": " Entrez un nom d'utilisateur valide ",
+    "User Creation Failed": " Échec lors de la création de l'utilisateur ",
+    "User Created": "Utilisateur créé",
+    " has been added to watcha": " a été ajouté à Watcha",
+    "Upgrade to internal user": "Promouvoir en utilisateur interne",
+    "Reset Password": " Réinitialiser le mot de passe",
+    "Deactivate Account": "Désactiver le compte",
+    "Show connection history": "voir l'historique de connexion",
+    "Device": "Appareil",
+    "Devices": "Appareils",
+    "Last seen": "Dernière activité le",
+    "Connected": "Connecté",
+    "Creation": "Création ",
+    "Account deactivated": "Compte désactivé",
+    " account has been deactivated": " a été désactivé",
+    "Role updated": "Rôle mis à jour",
+    " account has been upgraded to internal user": " a été promu en utilisateur interne",
+    "Deactivation failed": "L'opération a échoué",
+    "an email has been send to ": "un email a été envoyé à ",
+    " with a new password": " avec un nouveau de mot de passe",
+    "Account reactivated": "Compte réactivé",
+    "The account ": "Le compte ",
+    " has been reactivated, and an email has been sent to the user with a new password": " a été réactivé, et un nouveau mot de passe a été envoyé à l'utilisateur",
+    "Password reset failed": "L'opération a échoué",
+    "Name": "Nom",
+    "Active": "Actif",
+    "Creator": "Créateur",
+    "Show users": "Afficher les utilisateurs",
+    "Users in this room": "Utilisateurs dans ce salon",
+    "User name": "Nom d'utilisateur",
+    "Display Name": "Nom d'affichage",
+    "Date of creation": "Créé le",
+    "Room Id": "Identifiant du salon",
+    "Password reset": "Mot de passe réinitialisé",
+    "Activate account": "Activer le compte",
+    "lang": "fr-FR"
 }
