feat: redisign login form

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -74,5 +74,6 @@
     "Room Id": "Identifiant du salon",
     "Password reset": "Mot de passe réinitialisé",
     "Activate account": "Activer le compte",
+    "Administration interface": "Interface d'administration",
     "lang": "fr-FR"
 }
