feat: extract Login from App component

--- a/src/translation/fr/common.json
+++ b/src/translation/fr/common.json
@@ -75,5 +75,6 @@
     "Password reset": "Mot de passe réinitialisé",
     "Activate account": "Activer le compte",
     "Administration interface": "Interface d'administration",
+    "Password": "Mot de passe",
     "lang": "fr-FR"
 }
