--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -76,5 +76,9 @@
     "Activate account": "Activer le compte",
     "Administration interface": "Interface d'administration",
     "Password": "Mot de passe",
-    "lang": "fr-FR"
+
+    "errorBoundary": {
+        "title": "Quelque chose s’est mal passé !",
+        "body": "<0>Si le disfonctionnement venait à se reproduire, veuillez nous contacter à <0>{{email}}</0>.</0><1>Vous allez être redirigé vers <0>{{redirectUrl}}</0> dans quelques secondes...</1>"
+    }
 }
