Watcha op283 use js-sdk (#8)
* feat: extract Login from App component

* refactor: remove obsolete package-lock.json since using yarn

* feat: use matrix-js-sdk for login

* feat: use URL() rather than string concatenation

* fix: remove useless t()

* feat: upgrade i18n engine

* feat: add an error boundary

* refactor: extensive but very safe cleaning of the code base

No purpose changes  :
- format with Prettier
- convert arrow methods with only an instruction into oneline
- convert the setStates having only one argument into oneline
- merge consecutive setStates
- reorganize imports
- improve react-bootstrap imports
- convert small components into stateless functional components
- isEmail() now returns only a boolean
- convert React life cycles (componentDidMount...) to standard methods, not to class properties
- remove useless constructors
- cleaning of line breaks...

* fix: replace obsolete prop for Alert components

* feat: use classnames() to improve BooleanRow component

* fix: upgrade dependencies

* fix: restore homepage in package.json and update i18n config

* feat: add context for matrix client

* feat: replace deactivateAccount() with client.deactivateSynapseUser()

* fix: add namespace array in i18n config

* fix: turn off debug for i18n

* fix: refresh the user table by validating user creation alert

* feat: use context wherever token and baseUrl are needed

* feat: add SuspenseFallback component

* feat: delay fallback suspense display

--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -75,5 +75,10 @@
     "Password reset": "Mot de passe réinitialisé",
     "Activate account": "Activer le compte",
     "Administration interface": "Interface d'administration",
-    "lang": "fr-FR"
+    "Password": "Mot de passe",
+
+    "errorBoundary": {
+        "title": "Quelque chose s’est mal passé !",
+        "body": "<0>Si le disfonctionnement venait à se reproduire, veuillez nous contacter à <0>{{email}}</0>.</0><1>Vous allez être redirigé vers <0>{{redirectUrl}}</0> dans quelques secondes...</1>"
+    }
 }
