feat: update i18n for tab titles

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -14,5 +14,17 @@
     "errorBoundary": {
         "title": "Something went wrong!",
         "body": "<0>Should the failure happen again, please contact us at <0>{{email}}</0>.</0><1>You'll be redirected to <0>{{redirectUrl}}</0> in a few seconds...</1>"
+    },
+    "dashboardTab": {
+        "title": "Dashboard"
+    },
+    "usersTab": {
+        "title": "Users"
+    },
+    "roomsTab": {
+        "title": "Rooms"
+    },
+    "monitoringTab": {
+        "title": "Monitoring"
     }
 }
