--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,5 +1,4 @@
 {
-    "Sign in": "Connexion",
     "Members": "Utilisateurs internes ",
     "Member": "Utilisateur interne",
     "Internal users": "Utilisateurs internes",
@@ -13,7 +12,6 @@
     "Inactive Rooms": "Salons inactifs ",
     "Inactive": "Inactifs",
     "Room": "Salon ",
-    "Loading": "Chargement",
     "Status": "Rôle",
     "User": "Utilisateur ",
     "Statistics for Watcha server": "Statistiques",
@@ -60,7 +58,6 @@
     "The account ": "Le compte ",
     " has been reactivated, and an email has been sent to the user with a new password": " a été réactivé, et un nouveau mot de passe a été envoyé à l'utilisateur",
     "Password reset failed": "L'opération a échoué",
-    "Name": "Nom",
     "Active": "Actif",
     "Creator": "Créateur",
     "Show users": "Afficher les utilisateurs",
@@ -71,12 +68,17 @@
     "Room Id": "Identifiant du salon",
     "Password reset": "Mot de passe réinitialisé",
     "Activate account": "Activer le compte",
-    "Administration interface": "Interface d'administration",
-    "Password": "Mot de passe",
 
     "errorBoundary": {
         "title": "Quelque chose s’est mal passé !",
         "body": "<0>Si le disfonctionnement venait à se reproduire, veuillez nous contacter à <0>{{email}}</0>.</0><1>Vous allez être redirigé vers <0>{{redirectUrl}}</0> dans quelques secondes...</1>"
+    },
+    "login": {
+        "title": "Interface d'administration",
+        "username": "Adresse électronique",
+        "password": "Mot de passe",
+        "button": "Connexion",
+        "loading": "Chargement..."
     },
     "dashboardTab": {
         "title": "Tableau de bord"
