feat: add new user button

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -24,6 +24,7 @@
             "clear": "Clear",
             "placeholder": "Filter users"
         },
+        "button": "New user",
         "displayName": "Display name",
         "emailAddress": "Email address",
         "lastSeen": "Last activity on",
