feat: add the old UserRightPanel to the new UsersTab

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -35,7 +35,7 @@
         "roles": {
             "administrator": "Administrator",
             "collaborator": "Collaborator",
-            "partners": "Partners"
+            "partner": "Partner"
         },
         "isActive": {
             "1": "enabled",
