feat: wrap createUserRightPanel into NewItemModal component

--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -69,5 +69,7 @@
         "password": "Mot de passe",
         "button": "Connexion",
         "loading": "Chargement..."
-    }
+    },
+    "save": "Enregistrer",
+    "cancel": "Annuler"
 }
