--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -6,6 +6,18 @@
         "placeholder": "Filter users"
     },
     "button": "New user",
+    "fullName": "Full name",
+    "emailAddress": "Email address",
+    "requiered": {
+        "fullName": "$t(fullName) is requiered",
+        "emailAddress": "$t(emailAddress) is requiered"
+    },
+    "invalid": "Please provide {{field}}",
+    "invalidField": {
+        "fullName": "name and surname spaced out",
+        "emailAddress": "a valid email address"
+    },
+    "unavailableEmailAddress": "This email address is already bound to another account.",
     "headers": {
         "displayName": "Display name",
         "emailAddress": "Email address",
