--- a/public/locales/fr/usersTab.json
+++ b/public/locales/fr/usersTab.json
@@ -6,6 +6,18 @@
         "placeholder": "Filtrer les utilisateurs"
     },
     "button": "Nouvel utilisateur",
+    "fullName": "Nom complet",
+    "emailAddress": "Adresse électronique",
+    "requiered": {
+        "fullName": "Le nom complet est requis",
+        "emailAddress": "L'adresse électronique est requise"
+    },
+    "invalid": "Veuillez entrer {{field}}",
+    "invalidField": {
+        "fullName": "les nom et prénom espacés",
+        "emailAddress": "une adresse électronique valide"
+    },
+    "unavailableEmailAddress": "Cette adresse électronique est déjà liée à un autre compte",
     "headers": {
         "displayName": "Nom d'affichage",
         "emailAddress": "Adresse électronique",
