feat: link new user form and watcha_register end point

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,5 +15,8 @@
         "body": "<0>Should the failure happen again, please contact us at <0>{{email}}</0>.</0><1>You'll be redirected to <0>{{redirectUrl}}</0> in a few seconds...</1>"
     },
     "save": "Save",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "close": "Close",
+    "success": "Successfull transaction",
+    "danger": "An error has occurred"
 }
