--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -18,6 +18,8 @@
         "emailAddress": "a valid email address"
     },
     "unavailableEmailAddress": "This email address is already bound to another account.",
+    "success": "A new user has been created",
+    "danger": "User creation failed",
     "headers": {
         "displayName": "Display name",
         "emailAddress": "Email address",
