--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -10,26 +10,8 @@
     "Inactive Rooms": "Salons inactifs ",
     "Room": "Salon ",
     "Statistics for Watcha server": "Statistiques",
-    "Hide internal users": "Masquer les utilisateurs internes",
     "Hide one-to-one conversations": "Masquer les conversations à deux",
-    "Hide partners": "Masquer les utilisateurs externes",
-    "Hide inactive": "Masquer les salons inactifs",
     "Search": "Rechercher",
-    "Last Name": "Nom",
-    "First Name": "Prénom",
-    "This email address seems to be invalid. Please enter a valid email address.": "Cette adresse email semble invalide. Veuillez entrer une adresse email valide",
-    "Invalid Email": "Adresse email invalide",
-    "Invalid Last Name": "Nom invalide",
-    "First Name must contain at least two characters ": "Le Prénom doit contenir au moins deux caractères",
-    "Last Name must contain at least two characters ": "Le Nom doit contenir au moins deux caractères",
-    "Email already in use": "Email utilisé",
-    "Invalid First Name": "Prénom invalide",
-    " is already in use for a different account.": " est déjà associé à un compte.",
-    "User id required": "Nom d'utilisateur requis",
-    "Enter a valid user id": " Entrez un nom d'utilisateur valide ",
-    "User Creation Failed": " Échec lors de la création de l'utilisateur ",
-    "User Created": "Utilisateur créé",
-    " has been added to watcha": " a été ajouté à Watcha",
     "Upgrade to internal user": "Promouvoir en utilisateur interne",
     "Reset Password": " Réinitialiser le mot de passe",
     "Deactivate Account": "Désactiver le compte",
@@ -71,5 +53,8 @@
         "loading": "Chargement..."
     },
     "save": "Enregistrer",
-    "cancel": "Annuler"
+    "cancel": "Annuler",
+    "close": "Fermer",
+    "success": "Opération terminée avec succès",
+    "danger": "Une erreur s'est produite"
 }
