--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -58,7 +58,8 @@
     "Activate account": "Activer le compte",
     "Number of rooms": "Nombre de salons",
     "Number of personnals conversations": "Nombre de conversations privées",
-    "Of which active": "Dont actif",
+    "Of which active rooms": "Dont salons actifs",
+    "Of which active personnals conversations": "Dont conversations privées actives",
 
     "errorBoundary": {
         "title": "Quelque chose s’est mal passé !",
