--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -4,10 +4,8 @@
     "Internal users": "Utilisateurs internes",
     "Partners": "Partenaires ",
     "Administrators": "Administrateurs ",
-    "Active rooms": "Salons actifs ",
     "One-to-one conversations": "Conversations à deux ",
     "One to one": "Conversation à deux",
-    "Inactive Rooms": "Salons inactifs ",
     "Room": "Salon ",
     "Statistics for Watcha server": "Statistiques",
     "Hide internal users": "Masquer les utilisateurs internes",
@@ -58,6 +56,10 @@
     "Room Id": "Identifiant du salon",
     "Password reset": "Mot de passe réinitialisé",
     "Activate account": "Activer le compte",
+    "Number of rooms": "Nombre de salons",
+    "Number of personnals conversations": "Nombre de conversations privées",
+    "Of which active rooms": "Dont salons actifs",
+    "Of which active personnals conversations": "Dont conversations privées actives",
 
     "errorBoundary": {
         "title": "Quelque chose s’est mal passé !",
