--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -76,7 +76,8 @@
         "title": "Tableau de bord",
         "loggedUsers": "Utilisateurs connectés au moins une fois",
         "monthlyUsers": "Utilisateurs connectés sur le dernier mois",
-        "weeklyUsers": "Utilisateurs connectés sur la dernière semaine"
+        "weeklyUsers": "Utilisateurs connectés sur la dernière semaine",
+        "pendingInvitationUsers": "Utilisateurs ayant une invitation en attente"
     },
     "usersTab": {
         "title": "Utilisateurs",
