refactor: - remove useless optimization boilerplate - use ref in useEffet for variables that are not denpencies - add NexUserModal component - disable submission while feedback - reset form after validating feeback - update i18n "accountStatus" key

--- a/public/locales/en/usersTab.json
+++ b/public/locales/en/usersTab.json
@@ -26,15 +26,16 @@
         "emailAddress": "Email address",
         "lastSeen": "Last activity on",
         "role": "Role",
-        "accountStatus": "Account status"
+        "status": "Account status"
     },
     "roles": {
         "administrator": "Administrator",
         "collaborator": "Collaborator",
         "partner": "Partner"
     },
-    "isActive": {
-        "1": "enabled",
-        "0": "disabled"
+    "status": {
+        "active": "enabled",
+        "inactive": "disabled",
+        "invited": "invitation sent"
     }
 }
