style: change 'member' terms by 'collaborator'.

--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -74,6 +74,8 @@
     },
     "dashboardTab": {
         "title": "Tableau de bord",
+        "collaborators": "Collaborateurs",
+        "partners": "Partenaires",
         "loggedUsers": "Utilisateurs connectés au moins une fois",
         "monthlyUsers": "Utilisateurs connectés sur le dernier mois",
         "weeklyUsers": "Utilisateurs connectés sur la dernière semaine"
