--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -16,6 +16,8 @@
     },
     "dashboardTab": {
         "title": "Dashboard",
+        "collaborators": "Collaborators",
+        "partners": "Partners",
         "loggedUsers": "Users logged at least once",
         "monthlyUsers": "Users logged last month",
         "weeklyUsers": "Users logged last week"
